--- a/manifest.json
+++ b/manifest.json
@@ -15,5 +15,8 @@
   "browser_action": {
     "default_popup": "html/popup.html"
   },
-  "content_security_policy": "script-src 'self' https://d3js.org/d3.v5.min.js 'unsafe-eval'; object-src 'self'"
+  
+  "content_security_policy": "script-src 'self' https://code.jquery.com/jquery-3.3.1.slim.min.js https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js https://d3js.org/d3.v5.min.js 'unsafe-eval'; object-src 'self'"
+  
+  
 }
